--- a/assets/css/pages/_landingPage.scss
+++ b/assets/css/pages/_landingPage.scss
@@ -197,7 +197,8 @@
             margin: -80px auto 30px auto;
             z-index: 8;
             position: relative;
-            width: 750px;
+            max-width: 750px;
+            width: 100%;
             height: auto;
         }
     }
@@ -378,6 +379,8 @@
 
                 @include media-query(md-2) {
                     left: 300px;
+                    font-size: 6rem;
+                    top: 12px;
                 }
 
                 @include media-query(md) {
@@ -389,7 +392,7 @@
                 }
 
                 @include media-query(xs) {
-                    font-size: 6rem;
+                    font-size: 4rem;
                     top: 54px;
                 }
 
@@ -520,8 +523,13 @@
                 top: -13px;
                 left: 0;
 
-                @include media-query(xs) {
+                @include media-query(md-2) {
                     font-size: 6rem;
+                    top: 12px;
+                }
+
+                @include media-query(xs) {
+                    font-size: 4rem;
                     top: 0;
                 }
             }
@@ -585,6 +593,10 @@
         left:-50px;
         background: url(../images/arrow.svg);
 
+        @include media-query(md){
+            left: -40px;
+        }
+
         &:hover{
             transform: scale(1.5) translate(-7px, -7px);
         }
@@ -593,6 +605,10 @@
         background: url(../images/arrow.svg);
         right:-50px;
         transform: rotate(180deg) translateY(20px);
+
+        @include media-query(md){
+            right: -40px;
+        }
         
         &:hover{
             transform: rotate(180deg) scale(1.5) translate(-7px, 7px);
@@ -625,9 +641,15 @@
                 top: -44px;
                 left: 74px;
 
-                @include media-query(xs) {
-                    top:-29px;
+                @include media-query(md-2) {
+                    left: 55px;
                     font-size: 6rem;
+                    top: -25px;
+                }
+
+                @include media-query(xs) {
+                    top: -10px;
+                    font-size: 4rem;
                 }
 
                 @include media-query(xs-1) {
@@ -1127,6 +1149,8 @@
   .partner{
         &__slider-container{
             max-width: 640px;
+            padding-left: 15px;
+            padding-right: 15px;
         }
 
         &__title {
@@ -1405,6 +1429,8 @@
     .partner{
         &__slider-container{
             max-width: 640px;
+            padding-left: 45px;
+            padding-right: 45px;
         }
         &__bg{
             bottom: -90px;
@@ -1671,6 +1697,7 @@
 
                 &::before {
                     right: 160px;
+                    top: 40px;
                 }
             }
         }
